--- a/NF.Samples.AjaxTagHelper/NF.Samples.UsingAjaxTagHelpers/Views/_ViewImports.cshtml
+++ b/NF.Samples.AjaxTagHelper/NF.Samples.UsingAjaxTagHelpers/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using NF.Samples.UsingAjaxTagHelpers
 @using NF.Samples.UsingAjaxTagHelpers.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, NF.Samples.MyTagHelpers
